[tool.poetry]
name = "seld-dcase2023"
version = "0.1.0"
description = "Sound event localization and detection system for DCASE 2023"
authors = ["huwcheston <hwc31@cam.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "*"
ipython = "*"
scikit-learn = "*"
joblib = "*"
matplotlib = "*"
librosa = "*"
scipy = "*"
torch = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

